<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_coin"
            android:icon="@drawable/ic_send"
            android:title="@string/menu_coin"/>

        <item
            android:id="@+id/nav_reward"
            android:icon="@drawable/ic_import_export"
            android:title="@string/menu_rewards" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_build"
            android:title="@string/menu_setting" />
<!--        <item-->
<!--            android:id="@+id/nav_detail"-->
<!--            android:icon="@drawable/ic_description"-->
<!--            android:title="@string/menu_about" />-->
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_reply_black_24dp"
            android:title="@string/menu_logout" />
    </group>

</menu>
