<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="th.co.cdg.iconsume.ui.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_detail"
            app:destination="@id/nav_detail"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/nav_home" />
        <action
            android:id="@+id/action_nav_home_to_nav_chat"
            app:destination="@id/nav_chat"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_detail"
        android:name="th.co.cdg.iconsume.ui.DetailFragment"
        android:label="@string/menu_detail"
        tools:layout="@layout/fragment_detail" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="th.co.cdg.iconsume.ui.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_coin"
        android:name="th.co.cdg.iconsume.ui.CoinFragment"
        android:label="@string/menu_coin"
        tools:layout="@layout/fragment_coin" />

    <fragment
        android:id="@+id/nav_reward"
        android:name="th.co.cdg.iconsume.ui.RewardFragment"
        android:label="@string/menu_rewards"
        tools:layout="@layout/fragment_reward" />
</navigation>