<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/menu_bottom_sheet_camera"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:drawableStart="@drawable/ic_menu_camera"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:drawableTint="@color/colorDarkGray"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/bottom_camera" />

    <TextView
        android:id="@+id/menu_bottom_sheet_gallery"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:drawableStart="@drawable/ic_menu_gallery"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:drawableTint="@color/colorDarkGray"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/bottom_gallery" />

    <TextView
        android:id="@+id/menu_bottom_sheet_cancel"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:drawableStart="@drawable/ic_menu_cancel"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:drawableTint="@color/colorDarkGray"
        android:gravity="center_vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/bottom_cancel" />

</LinearLayout>