<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_8"
        tools:context=".ui.DetailFragment">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:text="รายละเอียดผลิตภัณฑ์"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8"
                    android:text="@string/detail_product_name_th"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvProductNameTh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8"
                    android:text="มันฝรั่งแท้ทอดกรอบแผ่นเรียบ สูตรลดปริมาณไขมันอิ่มตัว รสมันฝรั่งแท้ เครื่องหมายการค้าจดทะเบียน เลย์" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8"
                    android:text="@string/detail_product_name_en"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvProductNameEn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8"
                    android:text="(Lay’s) Flat Potato Chips Reduced Saturated Fat Formula Original Flavor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8"
                    android:text="@string/detail_status"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8"
                    android:text="(Lay’s) Flat Potato Chips Reduced Saturated Fat Formula Original Flavor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8"
                    android:text="@string/detail_product_category"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCategory"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8"
                    android:text="(Lay’s) Flat Potato Chips Reduced Saturated Fat Formula Original Flavor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8"
                    android:text="@string/detail_author_no"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAuthorNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8"
                    android:text="(Lay’s) Flat Potato Chips Reduced Saturated Fat Formula Original Flavor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8"
                    android:text="@string/detail_author_name"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAuthorName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8"
                    android:text="(Lay’s) Flat Potato Chips Reduced Saturated Fat Formula Original Flavor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8"
                    android:text="@string/detail_place"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8"
                    android:text="(Lay’s) Flat Potato Chips Reduced Saturated Fat Formula Original Flavor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8"
                    android:text="@string/detail_address"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8"
                    android:text="(Lay’s) Flat Potato Chips Reduced Saturated Fat Formula Original Flavor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8"
                    android:text="@string/detail_newcode"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvNewCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8"
                    android:text="(Lay’s) Flat Potato Chips Reduced Saturated Fat Formula Original Flavor" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/label_width"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_8"
                    android:text="@string/detail_product"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvTag1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8"
                    android:background="@color/colorAccent"
                    android:drawableEnd="@drawable/ic_menu_cancel"
                    android:drawablePadding="@dimen/margin_4"
                    android:gravity="center"
                    android:padding="@dimen/margin_4"
                    android:text="Tag1"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/tvTag2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8"
                    android:background="@color/colorAccent"
                    android:drawableEnd="@drawable/ic_menu_cancel"
                    android:drawablePadding="@dimen/margin_4"
                    android:gravity="center"
                    android:padding="@dimen/margin_4"
                    android:text="Tag2"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="@dimen/margin_8"
            android:background="@android:drawable/editbox_background"
            android:padding="@dimen/activity_horizontal_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:srcCompat="@mipmap/ic_launcher" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivImage2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="@dimen/margin_8"
            android:background="@android:drawable/editbox_background"
            android:padding="@dimen/activity_horizontal_margin"
            app:layout_constraintStart_toEndOf="@id/ivImage"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            app:srcCompat="@drawable/ic_add_a_photo" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContactOryor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="แจ้ง อย."
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>